# apps/edge-service/openapi/edge-openapi.json
@@ -2331,7 +2331,7 @@
         "parameters": [
           {
             "in": "query",
-            "name": "from_",
+            "name": "from",
             "required": false,
             "schema": {
               "anyOf": [
@@ -2342,7 +2342,7 @@
                   "type": "null"
                 }
               ],
-              "title": "From "
+              "title": "From"
             }
           },
           {
